--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
   --darck-background-color: #2f303a;
   --footer-text-accent: #ffffff99;
   --icon-color: #afb1b8;
+  --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*body*/
@@ -26,6 +27,9 @@ body {
   font-family: 'Roboto', sans-serif;
   letter-spacing: 0.03em;
   font-size: 14px;
+}
+.no-scroll {
+  overflow: hidden;
 }
 h1,
 h2,
@@ -113,7 +117,9 @@ header {
 }
 
 .site-nav .link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--animation);
+  position: relative;
+
   color: var(--primary-text-color);
   display: block;
   padding-top: 32px;
@@ -130,6 +136,17 @@ header {
 }
 .site-nav .link.current {
   color: var(--accent-color);
+}
+.site-nav .link.current::after {
+  content: '';
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
 }
 
 /*header-contact*/
@@ -152,7 +169,7 @@ header {
   line-height: 1.14;
   letter-spacing: 0.02em;
   align-items: center;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--animation);
 }
 .header-contact .link:hover,
 .header-contact .link:focus {
@@ -213,9 +230,7 @@ header {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--animation), background-color var(--animation), box-shadow var(--animation);
 }
 
 .button:hover,
@@ -255,6 +270,7 @@ header {
   padding: 10px 32px;
   border: none;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 /*specialty*/
@@ -314,6 +330,7 @@ header {
 .antenna {
   align-items: center;
 }
+
 /*about*/
 .about {
   padding-top: 0px;
@@ -322,12 +339,32 @@ header {
   display: flex;
 }
 .item-about .item {
+  position: relative;
   margin-right: 30px;
 }
 .item-about .item:last-child {
   margin-right: 0px;
 }
+.item-about .name {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: rgba(47, 48, 58, 0.8);
+  width: 370px;
+  height: 70px;
+}
+
+.item-about .text {
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1.14;
+  color: var(--text-white-color);
+}
 /*team*/
 .team {
   background-color: var(--secondary-background-color);
@@ -383,7 +420,7 @@ header {
 }
 .social-icon {
   fill: var(--icon-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--animation);
 }
 
 .social-link {
@@ -394,7 +431,7 @@ header {
   height: 44px;
   border-radius: 50%;
   margin-right: 10px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--animation);
 }
 .social-link:last-child {
   margin-right: 0px;
@@ -421,7 +458,7 @@ header {
 }
 .icon-logo {
   fill: var(--icon-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--animation);
 }
 .client-logo {
   display: flex;
@@ -432,7 +469,7 @@ header {
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   cursor: pointer;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border var(--animation);
 }
 
 .client-logo:hover,
@@ -473,8 +510,8 @@ header {
   line-height: 1.7;
 }
 
-.footer-contact .link-contact: {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.footer-contact .link-contact {
+  transition: color var(--animation);
 }
 
 .footer-contact .link-contact:hover,
@@ -524,7 +561,7 @@ header {
 
   background-color: #ffffff1a;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--animation);
 }
 
 .footer-social-link:hover,
@@ -534,6 +571,58 @@ header {
 .footer-social-icon {
   fill: var(--text-white-color);
 }
+
+/*modal*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.44, 1.09, 1, 0.33),
+    visibility 250ms cubic-bezier(0.44, 1.09, 1, 0.33);
+
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 528px;
+  min-height: 581px;
+
+  background-color: var(--primary-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.close {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+
+  fill: rgba(0, 0, 0, 1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
 /*portfolio*/
 .portfolio {
   position: absolute;
@@ -570,6 +659,7 @@ header {
   font-size: 16px;
   line-height: 1.86;
 }
+
 .item-projekt {
   display: block;
   margin-right: 30px;
@@ -588,12 +678,37 @@ header {
 }
 .card {
   display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--animation);
 }
 .card:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+.projekt-overlay {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.card .text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(101%);
+  padding: 63px 24px;
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--text-white-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  transition: transform var(--animation);
+}
+.card:hover .text {
+  transform: translateY(0%);
+}
+
 .card-body {
   padding: 20px 24px;
   border: 1px solid rgba(238, 238, 238, 1);
